# tetragon-grpc-client

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  docker-compose.yml  proto
examples/: Cargo.toml  getevents.rs  policy.rs
proto/: README.md
src/: getevents.rs  lib.rs  main.rs
tetragon-grpc/: Cargo.toml  build.rs
