[package]
name = "tetragon-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
prost-types = "0.12.3"
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sudo = "0.6"
anyhow = "1.0.81"
crossbeam-channel = "0.5.12"
futures = "0.3.30"

[build-dependencies]
tonic-build = "0.11"
